--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "public/javascripts/autoresize"]
 	path = public/javascripts/autoresize
 	url = git://github.com/jamespadolsey/jQuery.fn.autoResize.git
+[submodule "public/javascripts/github-flavored-markdown"]
+	path = public/javascripts/github-flavored-markdown
+	url = git://github.com/github/github-flavored-markdown.git
