--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "public/javascripts/autocomplete"]
 	path = public/javascripts/autocomplete
 	url = git://github.com/agarzola/jQueryAutocompletePlugin.git
+[submodule "public/javascripts/file-uploader"]
+	path = public/javascripts/file-uploader
+	url = git://github.com/valums/file-uploader.git
