--- a/package.json
+++ b/package.json
@@ -10,5 +10,6 @@
     , "connect-less": ">= 0.0.1"
     , "express-validator": ">= 0.1.1"
     , "formidable" : ">= 1.0.0"
+    , "oauth" : ">=0.0.1"
   }
 }
