--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   , "private": true
   , "dependencies": {
       "express": "2.5.0"
+    , "robotskirt" : ">= 0.0.1"
     , "less": ">= 0.0.1"
     , "jade": ">= 0.0.1"
     , "connect-redis": "*"
     , "connect-less": ">= 0.0.1"
+    , "iform": ">= 0.0.1"
     , "express-validator": ">= 0.1.1"
     , "formidable" : ">= 1.0.0"
     , "oauth" : ">=0.0.1"
