--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git://github.com/twitter/bootstrap.git
 [submodule "public/javascripts/autoresize"]
 	path = public/javascripts/autoresize
-	url = git://github.com/jamespadolsey/jQuery.fn.autoResize.git
+	url = git://github.com/padolsey/jQuery.fn.autoResize.git
 [submodule "public/javascripts/github-flavored-markdown"]
 	path = public/javascripts/github-flavored-markdown
 	url = git://github.com/github/github-flavored-markdown.git
