--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     , "iform": ">= 0.0.1"
     , "formidable" : ">= 1.0.0"
     , "oauth" : ">=0.0.1"
-    , "feedparser" : ">=0.0.1"
+    , "feedparser" : ">=0.9.3"
     , "async" : ">=0.0.1"
+    , "shorten" : ">=0.0.1"
   }
 }
